<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".clickedField">

    <ProgressBar
        android:id="@+id/loading1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group_sort"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/sort_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_sort_type"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toStartOf="@+id/group_sort"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/group_sort"
        app:layout_constraintBottom_toBottomOf="@+id/group_sort"/>

    <RadioGroup
        android:id="@+id/group_sort"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sort_type"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/rate"
            android:onClick="radioButtonClicked" />

        <RadioButton
            android:id="@+id/home_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/home_address"
            android:onClick="radioButtonClicked" />
    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_workers"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="3dp"
        android:scrollbars="vertical"
        android:visibility="gone"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@+id/group_sort"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>